--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,4 @@
-Copyright &copy; {{ dateFormat "2006" .Now }}
-{{ if $.Site.Author.name }}
-    {{ $.Site.Author.name }}
-{{ else }}
-    {{ $.Site.Title }}
-{{ end }}
+Copyright &copy; {{ dateFormat "2006" .Now }}   {{ $.Site.Author.name }} - <a href='{{ ref . "imprint.md" }}'>Impressum</a>
 
 <br/>
 
@@ -11,6 +6,6 @@ Powered by <a href="http://gohugo.io/">Hugo</a> | Design: <a href="http://shasha
 
 <br/>
 
-<a href='{{ ref . "about.md" }}'>about</a>
+
 
 {{ partial "fancybox.html" . }}
